--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,17 +1,31 @@
-= link_to "Myclio", root_path, :class => 'brand'
-ul.nav
-  - if user_signed_in?
-    li
-      = link_to 'Logout', destroy_user_session_path, :method=>'delete'
-  - else
-    li
-      = link_to 'Login', new_user_session_path
-  - if user_signed_in?
-    li
-      = link_to 'Edit account', edit_user_registration_path
-    - if current_user.has_role? :admin
-      li
-        = link_to 'Admin', users_path
-  - else
-    li
-      = link_to 'Sign up', new_user_registration_path
+.fixed.contained-to-grid
+  nav.top-bar
+    ul.title-area
+      li.name
+        = link_to "MyClio", root_path, :class => 'brand'
+      li.toggle-topbar
+        a href="#"
+      section.top-bar-section
+        ul.left
+          li.divider
+          - if user_signed_in?
+            li
+              = link_to 'View data', user_data_path(current_user)
+            li
+              = link_to 'Edit account', edit_user_registration_path
+            li
+              = link_to 'Edit data types', user_datum_types_path(current_user)
+          - else
+            li
+              = link_to 'Sign up', new_user_registration_path
+        ul.right
+          - if user_signed_in?
+            - if current_user.has_role? :admin
+              li
+                = link_to 'Admin', users_path
+            li
+              = link_to 'Logout', destroy_user_session_path, :method=>'delete'
+          - else
+            li
+              = link_to 'Login', new_user_session_path
+
