--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -10,6 +10,8 @@
           li.divider
           - if user_signed_in?
             li
+              = link_to 'Enter data', new_user_datum_path(current_user)
+            li
               = link_to 'View data', user_data_path(current_user)
             li
               = link_to 'Edit account', edit_user_registration_path
