--- a/app/views/data/index.html.haml
+++ b/app/views/data/index.html.haml
@@ -19,7 +19,7 @@
   - @data.each do |datum|
     %tr
       %td= datum.created_at.strftime("%a, %b %e at %l:%M %P %Z")
-      %td= datum.datumType.description
+      %td= datum.datumType.nil? ? "" : datum.datumType.description
       %td= datum.value
       %td= datum.comment
       %td
