add time-zone support (fixes #13) also restores / fixes #16 by not requiring datum_type also fixes #18 - previous fix was not correct

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
       header
         = render 'layouts/navigation'
         = render 'layouts/messages'
-      #main role="main"
+      .row#main role="main"
         = yield
       footer
     /! ! end of #container
