--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -5,6 +5,7 @@ h2
   = display_base_errors resource
   = f.input :name, :autofocus => true
   = f.input :email, :required => true
+  = f.input :time_zone, :priority => /US/
   = f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false
   = f.input :password_confirmation, :required => false
   = f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true
