--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -4,7 +4,7 @@
       li.name
         = link_to "MyClio", root_path, :class => 'brand'
       li.toggle-topbar
-        a href="#"
+        a href="#" +
       section.top-bar-section
         ul.left
           li.divider
@@ -14,9 +14,9 @@
             li
               = link_to 'View data', user_data_path(current_user)
             li
-              = link_to 'Edit account', edit_user_registration_path
-            li
               = link_to 'Edit data types', user_datum_types_path(current_user)
+            li
+              = link_to 'Edit account', edit_user_registration_path
           - else
             li
               = link_to 'Sign up', new_user_registration_path
