--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,38 +1,82 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require foundation_and_overrides
- *= require_tree .
-*/
+// Some variable overrides
+$primary-color: #3A4A6A;  
+$secondary-color: #46687F;
+$info-color: #004991;
+$error-color: #91000c;
+$success-color: #448110;
+$warn-color: #915200;
+$alert-color: $error-color;
+$notice-color: $success-color;
+
+$td-font: "Courier New", Courier, monospace;
+
+
+// Import vendor frameworks & vendor files
+@import 'foundation_and_overrides';  // includes foundation
+@import 'normalize';
+@import 'compass';
+@import "jquery.ui.all";
+@import "datetime";
+@import "font-awesome";
+
+// App-specific
+@import 'messages';
+
+html, body {
+  height: 100%;
+}
+
+.container {
+  min-height: 100%;
+  padding-top: 20px;
+  //margin: 0 auto -30px;
+}
+
+  
+
 .brand {
   float: left;
   padding-right: 8px;
 }
-ul.nav {
-  list-style: none;
-  margin: 0 0 2em;
+
+.top-bar-section li {
+  a:active, a:hover {
+    background-color: $topbar-link-bg-active;
+  }
+}
+
+.form-actions .row {
+  margin-top: 15px;
+}
+
+/*
+  Calendar expand buttons
+*/
+.button.calendarIcon {
+  background-color: #e9e9e9;
+  color: #4d4d4d;
+  border: 1px solid #c3c3c3;
+}
+
+.button.calendarIcon:hover, .button.calendarIcon:focus {
+  background-color: #B2B2B2;
+}
+
+/*
+  Always keep the datepicker calendar above everything.  The
+  postfix buttons will float above the calendar if we don't do this.
+*/
+.ui-datepicker {
+  z-index: 3 !important;
+}
+
+dl {
+  .ui* {
+    line-height: 1.0;
+  }
+}
+
+select {
+  @include form-element;
   padding: 0;
-}
-ul.nav li {
-  display: inline;
-}
-#flash_notice, #flash_alert {
-  padding: 5px 8px;
-  margin: 10px 0;
-}
-#flash_notice {
-  background-color: #CFC;
-  border: solid 1px #6C6;
-}
-#flash_alert {
-  background-color: #FCC;
-  border: solid 1px #C66;
 }
