--- a/app/views/layouts/_messages.html.slim
+++ b/app/views/layouts/_messages.html.slim
@@ -1,3 +1,9 @@
-- flash.each do |name, msg|
-  - if msg.is_a?(String)
-    = content_tag :div, msg, :id => "flash_#{name}"
+- if flash.any?
+  .row
+    .large-12.columns
+      - flash.each do |name, msg|
+        - if msg.is_a?(String)
+          div class="alert-box radius #{name}" data-alert=true
+            = msg
+            a.close href="#" &times;
+          - flash[name] = nil  # clear it out after displaying it
