tweaked the date/time entry fields to properly update; started adding search UI (not implemented yet)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,3 +80,8 @@ select {
   @include form-element;
   padding: 0;
 }
+
+.ui-datepicker .ui-datepicker-title select {
+  font-size: 0.8em;
+  display: inline-block;
+}
