--- a/app/views/data/new.html.slim
+++ b/app/views/data/new.html.slim
@@ -1,10 +1,9 @@
-/%h1 New Data Point
 
 .row.first
   .large-6.columns
     .panel.radius
       h5 New Data Point
-      = render 'form'
+      = render 'form', button_description: "Create"
   .large-6.columns
     .panel.radius
       h5 Recent Entries
