--- a/app/views/data/show.html.slim
+++ b/app/views/data/show.html.slim
@@ -1,6 +1,8 @@
-%p#notice= notice
-
+.row
+  .large-6.columns
+    .panel
+      = debug(@datum)
+  .large-6.columns
 
 = link_to 'Edit', edit_user_datum_path(current_user,@datum)
-\|
 = link_to 'Back', user_data_path(current_user)
