--- a/app/views/datum_types/new.html.slim
+++ b/app/views/datum_types/new.html.slim
@@ -2,4 +2,4 @@
   .large-6.large-centered.columns
     h3 New Data Type
     .panel.radius
-      = render 'form', button_description: "Create", formURL: user_datum_type_path(current_user)
+      = render 'form', { button_description: "Create", formURL: user_datum_types_path(current_user) }
