--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -17,6 +17,8 @@
             li
               = link_to 'Edit Data Types', user_datum_types_path(current_user)
             li
+              = link_to 'Edit Groups', user_groups_path(current_user)
+            li
               = link_to 'Edit Account', edit_user_registration_path
           - else
             li
