Add group selection + misc UI tweaks for small screens

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -1239,7 +1239,7 @@ $topbar-bg: $primary-color;
 // Height and margin
 
 // $topbar-height: 45px;
-// $topbar-margin-bottom: emCalc(30);
+$topbar-margin-bottom: emCalc(15);
 
 // Control Input height for top bar
 
