--- a/app/views/data/edit.html.slim
+++ b/app/views/data/edit.html.slim
@@ -1,7 +1,7 @@
 
 .row.first
-  .large-6.columns
+  .large-8.large-centered.columns
     .panel.radius
-      h5 Update Data Point
+      h4.text-center Update Data Point
       = render 'form', button_description: "Edit"
 
