--- a/app/views/data/new.html.slim
+++ b/app/views/data/new.html.slim
@@ -1,10 +1,8 @@
 
 .row.first
-  .large-6.columns
+  .large-8.large-centered.columns
     .panel.radius
-      h5 New Data Point
+      h4.text-center New Data Point
       = render 'form', button_description: "Create"
-  .large-6.columns
-    .panel.radius
-      h5 Recent Entries
+
 
