--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@ $notice-color: $success-color;
 @import "jquery.ui.all";
 @import "datetime";
 @import "font-awesome";
+@import "mobiscroll*";
 
 // App-specific
 @import 'messages';
@@ -157,7 +158,7 @@ background-color: #8dbdd8;
 
 @media (max-width: 768px) {
   table tbody tr th {
-    font-size: emCalc(12);
+    font-size: emCalc(11);
   }
 
   table tbody tr td {
@@ -165,3 +166,6 @@ background-color: #8dbdd8;
   }
 }
 
+.f-dropdown li a {
+  color: #fff;
+}
