--- a/app/views/data/index.html.slim
+++ b/app/views/data/index.html.slim
@@ -1,57 +1,66 @@
-.row
-  .large-12.columns
-    .panel.radius
-      .row
-        .small-9.columns
-          h3 = @isSearch ? "Search Results" : "Recent entries"
-        .small-3.columns
-          .show-for-small
-            = link_to 'Enter Data', new_user_datum_path(current_user), class: "button small"
+.large-12.columns
+  .panel.radius
+    .row
+      .small-8.columns
+        h3 = @isSearch ? "Search Results" : "Recent entries"
+      .small-4.columns
+        .show-for-small
+          = link_to 'Enter Data', new_user_datum_path(current_user), class: "button small"
 
-      .row.hide-for-small
-        = form_tag user_data_path(current_user), method: :get do
-          .large-9.columns
-            ul.large-block-grid-4
-              li
-                .row.collapse
-                  .small-10.columns
-                    input.dateField#effective_at_proxy type="text" placeholder="Search date" value="#{params[:datum_effective_at].blank? ? '' : params[:datum_effective_at].to_time.strftime('%m/%d/%Y')}"
-                    = hidden_field_tag :datum_effective_at, params[:datum_effective_at]
-                  .small-2.columns
-                    a.button.secondary.expand.postfix.calendarIcon href="#"
-                      i.icon-calendar
-              li
-                = select_tag :group, options_for_select( current_user.groups.collect { |d| [d.name, d.id] }, params[:group] ), {prompt: 'Search groups', class: 'placeholder'}
-              li
-                = select_tag :datumType, grouped_options_for_select( current_user.groups.collect { |g| [g.name,g.datumTypes.collect { |d| [d.description, d.id] } ] }, params[:datumType] ), {prompt: 'Search types', class: 'placeholder'}
-              li
-                = text_field_tag :comment, params[:comment], {placeholder: "Search comments"}
-          .large-3.columns
-            ul.small-block-grid-2
-              li
-                = submit_tag "Search", class: "button small"
-              li
-                = link_to 'Recent', user_data_path(current_user), class: "button small"
-      .row
-        table
-          tr
-            th.datetime Date/Time
-            th.datatype Data Type
-            th.value Value
-            th.comment Comment
-            th.actions Actions
+    .row.hide-for-small
+      = form_tag user_data_path(current_user), method: :get do
+        .large-9.columns
+          ul.large-block-grid-4
+            li
+              .row.collapse
+                .small-10.columns
+                  input.dateField#effective_at_proxy type="text" placeholder="Search date" value="#{params[:datum_effective_at].blank? ? '' : params[:datum_effective_at].to_time.strftime('%m/%d/%Y')}"
+                  = hidden_field_tag :datum_effective_at, params[:datum_effective_at]
+                .small-2.columns
+                  a.button.secondary.expand.postfix.calendarIcon href="#"
+                    i.icon-calendar
+            li
+              = select_tag :group, options_for_select( current_user.groups.collect { |d| [d.name, d.id] }, params[:group] ), {prompt: 'Search groups', class: 'placeholder'}
+            li
+              = select_tag :datumType, grouped_options_for_select( current_user.groups.collect { |g| [g.name,g.datumTypes.collect { |d| [d.description, d.id] } ] }, params[:datumType] ), {prompt: 'Search types', class: 'placeholder'}
+            li
+              = text_field_tag :comment, params[:comment], {placeholder: "Search comments"}
+        .large-3.columns
+          ul.small-block-grid-2
+            li
+              = submit_tag "Search", class: "button small"
+            li
+              = link_to 'Recent', user_data_path(current_user), class: "button small"
+    .row
+      table
+        tr
+          th.datetime Date/Time
+          th.datatype Data Type
+          th.value Value
+          th.comment Comment
+          th.actions 
+            .hide-for-small Actions
 
-          - if @data.length > 0
-            - @data.each do |datum|
-              tr
-                td.datetime = datum.effective_at.nil? ? "" : datum.effective_at.strftime("%a, %b %e %Y at %l:%M %P %Z")
-                td.datatype = datum.datumType.nil? ? "" : datum.datumType.description
-                td.value = datum.value
-                td.comment = datum.comment
-                td.actions
-                  = link_to 'Edit', edit_user_datum_path(current_user,datum), class: "button small" 
-                  = link_to 'X', user_datum_path(current_user,datum), class: "button small alert", :method => :delete, :data => { :confirm => 'Are you sure?' }
-          - else
+        - if @data.length > 0
+          - @data.each do |datum|
             tr
-              td.text-center colspan="5" No data points found!
+              td.datetime
+                .show-for-small = datum.effective_at.nil? ? "" : datum.effective_at.strftime("%-m/%-d/%y at %l:%M %P")
+                .hide-for-small = datum.effective_at.nil? ? "" : datum.effective_at.strftime("%a, %b %e %Y at %l:%M %P %Z")
+              td.datatype = datum.datumType.nil? ? "" : datum.datumType.description
+              td.value = datum.value
+              td.comment = datum.comment
+              td.actions
+                .show-for-small
+                  a.button.tiny href="#" data-dropdown="actions#{datum.id}" »
+                  ul.f-dropdown.content id="actions#{datum.id}" data-dropdown-content=true
+                    li = link_to 'Edit', edit_user_datum_path(current_user,datum), class: "button small" 
+                    li = link_to raw('&times;'), user_datum_path(current_user,datum), class: "button small alert", :method => :delete, :data => { :confirm => 'Are you sure?' }
+
+                .hide-for-small
+                  = link_to 'Edit', edit_user_datum_path(current_user,datum), class: "button small" 
+                  = link_to raw('&times;'), user_datum_path(current_user,datum), class: "button small alert", :method => :delete, :data => { :confirm => 'Are you sure?' }
+        - else
+          tr
+            td.text-center colspan="5" No data points found!
 
