Fix new/edit data types

--- a/app/views/datum_types/_form.html.slim
+++ b/app/views/datum_types/_form.html.slim
@@ -10,9 +10,9 @@
 
     .field.row        
       .small-2.columns.text-right
-        = f.label :title
+        = f.label :name
       .small-10.columns
-        = f.input :title
+        = f.input :name
 
     .field.row        
       .small-2.columns.text-right
