--- a/app/views/datum_types/new.html.slim
+++ b/app/views/datum_types/new.html.slim
@@ -1,5 +1,5 @@
 .row
-  .large-6.large-centered.columns
+  .large-10.large-centered.columns
     h3 New Data Type
     .panel.radius
-      = render 'form', { button_description: "Create", formURL: user_datum_types_path(current_user) }
+      = render 'form', button_description: "Create", formURL: user_datum_types_path(current_user)
