--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -638,7 +638,7 @@ $header-font-family: Verdana, Geneva, sans-serif; //Georgia, serif;
 
 // We use these to controls height and width styles.
 
-// $f-dropdown-max-width: 200px;
+$f-dropdown-max-width: 300px;
 // $f-dropdown-height: auto;
 // $f-dropdown-max-height: none;
 // $f-dropdown-margin-top: 2px;
@@ -663,9 +663,9 @@ $header-font-family: Verdana, Geneva, sans-serif; //Georgia, serif;
 
 // $f-dropdown-list-style: none;
 // $f-dropdown-font-color: #555;
-// $f-dropdown-font-size: emCalc(14);
-// $f-dropdown-list-padding: emCalc(5, 10);
-// $f-dropdown-line-height: emCalc(18);
+$f-dropdown-font-size: emCalc(14);
+$f-dropdown-list-padding: emCalc(5, 10);
+$f-dropdown-line-height: emCalc(18);
 // $f-dropdown-list-hover-bg: #eeeeee;
 // $dropdown-mobile-default-float: 0;
 
@@ -1025,16 +1025,16 @@ $panel-bg: #D9E0EA;
 
 // $section-title-padding: emCalc(15);
 // $section-content-padding: emCalc(15);
-// $section-function-factor: 10%;
+$section-function-factor: 40%;
 
 // These style the titles
 
-// $section-title-color: #333;
-// $section-title-color-active: #333;
-// $section-title-bg: #efefef;
-// $section-title-bg-active: darken($section-title-bg, $section-function-factor);
-// $section-title-bg-active-tabs: #fff;
-// $section-title-bg-hover: darken($section-title-bg, $section-function-factor / 2);
+$section-title-color: white;
+$section-title-color-active: white;
+$section-title-bg: $primary-color;
+$section-title-bg-active: lighten($section-title-bg, $section-function-factor);
+$section-title-bg-active-tabs: #fff;
+$section-title-bg-hover: lighten($section-title-bg, $section-function-factor / 2);
 
 // Want to control border size, here ya go!
 
